--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#discover">Discover</a></li>
-            <li><a href="#places">Placesss</a></li>
+            <li><a href="#places">Place</a></li>
           </ul>
         </div>
         <div class="burger-menu">
